lander.lessons.lander.lvl3_fly_the_lander.FlyTheLander.scala.error
Lander:1: error: '=' expected but '(' found.
  override def initialize():Array[Int](2) {
                                      ^Lander:13: error: illegal start of simple expression
  override def step() {
^